--- a/src/components/styles/SpinnerQ.css
+++ b/src/components/styles/SpinnerQ.css
@@ -1,13 +1,13 @@
 .sk-cube-grid {
-  width: 100px;
-  height: 100px;
-  margin: 200px auto;
+  width: 40px;
+  height: 40px;
+  margin: 50px auto;
 }
 
 .sk-cube-grid .sk-cube {
   width: 33%;
   height: 33%;
-  background-color: #333;
+  background-color: #6EC4BA;
   float: left;
   -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
           animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out; 
