--- a/src/pages/styles/Home.css
+++ b/src/pages/styles/Home.css
@@ -3,29 +3,8 @@
     padding-top: 30px;
 }
 
-.pagination__container {
+.error__container {
     display: flex;
     justify-content: center;
-    align-items: center;
-}
-
-.btnPag {
-    background-color: #3f3f3f;
-    border-radius: 4px;
-    border: 2px solid black;
-    color: white;
-    width: 90px;
-    padding: 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 12px;
-}
-
-.currentPage {
-    margin: 0 10px;
-}
-
-.btnPag:disabled {
-    opacity: 0.5;
+    margin-top: 100px;
 }
