--- a/src/pages/styles/Home.css
+++ b/src/pages/styles/Home.css
@@ -3,6 +3,25 @@
     padding-top: 30px;
 }
 
+.allShowsBtn__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.allShowsBtn {
+    background-color: #3f3f3f;
+    border-radius: 4px;
+    border: 2px solid black;
+    color: white;
+    width: 90px;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+}
+
 .error__container {
     display: flex;
     justify-content: center;
