--- a/src/components/styles/List.css
+++ b/src/components/styles/List.css
@@ -3,6 +3,7 @@
     flex-wrap: wrap;
     justify-content: center;
     padding: 20px;
+    text-decoration: none;
 }
 
 @media (min-width: 768px) {
